--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     //图片加载库
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    //仿美团首页分类
+    //首页分类
     compile 'com.github.FJ917:FJMtSortButton:v1.1'
     //万能适配器
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.18'
-    //listView万能适配器
-    compile 'com.zhy:base-adapter:3.0.3'
+    //头部tab
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
