--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.zmq.shopmall"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -47,4 +47,6 @@ dependencies {
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.18'
     //头部tab
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    //几种popupwindow用法
+    compile 'com.github.pinguo-zhouwei:CustomPopwindow:2.0.0'
 }
