--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     compile 'com.zaaach:citypicker:1.1'
     //隐藏输入键盘
     compile 'com.yinglan.keyboard:hidekeyboard:1.1.0'
+    //swiperefreshlayout上拉加载 下拉刷新
+    compile 'com.github.nuptboyzhb.lib.uikit:superswiperefreshlayout:1.0.0'
 }
