--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     compile 'com.github.chihane:JDAddressSelector:1.1.4'
     //导航栏
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    //Flexboxlayout控件 -- 配合recycleview使用  单独使用可以另外配置
+    compile 'com.google.android:flexbox:0.3.0-alpha4'
 }
