--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,6 @@ dependencies {
 
     //轮播图
     compile 'com.youth.banner:banner:1.4.9'  //最新版本
-    //底部导航栏
-    compile 'com.jpeng:JPTabBar:1.2.3'
     //butterknife注解
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
@@ -68,4 +66,6 @@ dependencies {
     compile 'com.github.chihane:JDAddressSelector:1.1.4'
     //Flexboxlayout控件 -- 配合recycleview使用  单独使用可以另外配置
     compile 'com.google.android:flexbox:0.3.0-alpha4'
+    //底部tablayout
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 }
